--- a/configs/traefik/traefik.yml
+++ b/configs/traefik/traefik.yml
@@ -14,7 +14,10 @@ entryPoints:
     address: :443
 api:
   dashboard: true
-  insecure: false
+  insecure: true
 providers:
+  file:
+    watch: true
+    directory: /etc/traefik/dynamic_conf
   docker:
     exposedByDefault: false
