--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,28 +15,29 @@ services:
     ports:
       - '80:80'
       - '443:443'
-      - '8080:8080'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./configs/traefik/traefik.yml:/etc/traefik/traefik.yml
+      - ./configs/traefik/certs.yml:/etc/traefik/dynamic_conf/certs.yml
+      - ./configs/traefik/certs:/etc/certs
     labels:
       - 'traefik.enable=true'
       - 'traefik.docker.network=ci-hie-demo_hie'
-      - 'traefik.http.routers.api.rule=PathPrefix(`/traefik`)'
+      - 'traefik.http.routers.api.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/api`) || PathPrefix(`/dashboard`)'
       - 'traefik.http.routers.api.service=api@internal'
       - 'traefik.http.routers.api.tls=true'
       - 'traefik.http.routers.api.entrypoints=web-secure'
-      - 'traefik.http.routers.api.middlewares=api'
-      - 'traefik.http.middlewares.api.stripprefix.prefixes=/traefik'
-      - 'traefik.http.middlewares.api.stripprefix.forceSlash=false'
-
+    networks:
+      - hie
   sigdep3:
     image: partnersinhealth/openmrs-server:latest
     depends_on:
-      db:
+      sigdep-db:
         condition: service_healthy
+    container_name: sigdep3
+    hostname: sigdep3
     environment:
-      OMRS_CONFIG_CONNECTION_SERVER: "db"
+      OMRS_CONFIG_CONNECTION_SERVER: "sigdep-db"
       OMRS_CONFIG_CONNECTION_ROOT_PASSWORD: "root"
       OMRS_CONFIG_CONNECTION_USERNAME: "root"
       OMRS_CONFIG_CONNECTION_PASSWORD: "root"
@@ -49,13 +50,24 @@ services:
       - ./configs/sigdep3/distribution:/openmrs/distribution
       - /openmrs/data
     ports:
-      - "8081:8080"
+      - "8090:8080"
       - "1044:1044"
-
-  db:
-    platform: linux/amd64
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.docker.network=ci-hie-demo_hie'
+      
+      - 'traefik.http.services.sigdep3.loadbalancer.server.port=8080'
+      - 'traefik.http.services.sigdep3.loadbalancer.server.scheme=http'
+      - 'traefik.http.routers.sigdep3.service=sigdep3'
+      - 'traefik.http.routers.sigdep3.tls=true'
+      - 'traefik.http.routers.sigdep3.entrypoints=web-secure'
+      - 'traefik.http.routers.sigdep3.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openmrs`)'
+    networks: 
+      - hie
+  sigdep-db:
     image: library/mysql:5.6
-    container_name: sigdep_db
+    hostname: sigdep-db
+    container_name: sigdep-db
     command: "mysqld \
               --character-set-server=utf8 \
               --collation-server=utf8_general_ci \
@@ -74,6 +86,8 @@ services:
       - mysql-data:/var/lib/mysql
     ports:
       - "3306:3306"
+    networks:
+      - hie
 
   ###
   # OpenHIM
@@ -105,7 +119,7 @@ services:
       - 'traefik.http.routers.openhim-api.service=openhim-api'
       - 'traefik.http.routers.openhim-api.tls=true'
       - 'traefik.http.routers.openhim-api.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-api.rule=PathPrefix(`/openhim-api`)'
+      - 'traefik.http.routers.openhim-api.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-api`)'
       - 'traefik.http.routers.openhim-api.middlewares=openhim-api'
       - 'traefik.http.middlewares.openhim-api.stripprefix.prefixes=/openhim-api'
       - 'traefik.http.middlewares.openhim-api.stripprefix.forceSlash=false'
@@ -115,7 +129,7 @@ services:
       - 'traefik.http.routers.openhim-http.service=openhim-http'
       - 'traefik.http.routers.openhim-http.tls=true'
       - 'traefik.http.routers.openhim-http.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-http.rule=PathPrefix(`/openhim-http`)'
+      - 'traefik.http.routers.openhim-http.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-http`)'
       - 'traefik.http.routers.openhim-http.middlewares=openhim-http'
       - 'traefik.http.middlewares.openhim-http.stripprefix.prefixes=/openhim-http'
       - 'traefik.http.middlewares.openhim-http.stripprefix.forceSlash=false'
@@ -125,7 +139,7 @@ services:
       - 'traefik.http.routers.openhim-ssl.service=openhim-ssl'
       - 'traefik.http.routers.openhim-ssl.tls=true'
       - 'traefik.http.routers.openhim-ssl.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-ssl.rule=PathPrefix(`/openhim-ssl`)'
+      - 'traefik.http.routers.openhim-ssl.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-ssl`)'
       - 'traefik.http.routers.openhim-ssl.middlewares=openhim-ssl'
       - 'traefik.http.middlewares.openhim-ssl.stripprefix.prefixes=/openhim-ssl'
       - 'traefik.http.middlewares.openhim-ssl.stripprefix.forceSlash=false'
@@ -135,8 +149,6 @@ services:
     hostname: openhim-console
     image: jembi/openhim-console:latest
     restart: unless-stopped
-    ports:
-      - "81:80"
     volumes:
       - ./configs/openhim-console/default.json:/usr/share/nginx/html/config/default.json
     healthcheck:
@@ -149,7 +161,7 @@ services:
       - 'traefik.docker.network=ci-hie-demo_hie'
       - 'traefik.http.routers.openhim-console.tls=true'
       - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-console.rule=PathPrefix(`/openhim`)'
+      - 'traefik.http.routers.openhim-console.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim`)'
       - 'traefik.http.routers.openhim-console.middlewares=openhim-console'
       - 'traefik.http.middlewares.openhim-console.stripprefix.prefixes=/openhim'
       - 'traefik.http.middlewares.openhim-console.stripprefix.forceSlash=false'
@@ -178,16 +190,10 @@ services:
   # OpenCR - Client Registry
   ###
   opencr:
-    platform: linux/amd64
     container_name: opencr
     hostname: opencr
     image: intrahealth/opencr:latest
     restart: unless-stopped
-    depends_on:
-      - es
-      - opencr-fhir
-    ports:
-      - "3000:3000"
     environment:
       - NODE_ENV=docker
       - HAPI_FHIR_URL=http://opencr-fhir:8080/fhir/metadata
@@ -202,13 +208,11 @@ services:
       - 'traefik.http.routers.opencr.tls=true'
       - 'traefik.http.routers.opencr.entrypoints=web-secure'
       - 'traefik.http.services.opencr.loadbalancer.server.port=3000'
-      - 'traefik.http.routers.opencr.rule=PathPrefix(`/opencr`)'
-      - 'traefik.http.routers.opencr.middlewares=opencr'
-      - 'traefik.http.middlewares.opencr.stripprefix.prefixes=/opencr'
-      - 'traefik.http.middlewares.opencr.stripprefix.forceSlash=false'
-  
+      - 'traefik.http.routers.opencr.rule=Host(`tap-demo.openelisci.org`)'
+    ports:
+      - 3000:3000
   opencr-fhir:
-    image: hapiproject/hapi:latest
+    image: hapiproject/hapi:v5.1.0
     container_name: opencr-fhir
     hostname: opencr-fhir
     restart: unless-stopped
@@ -219,10 +223,15 @@ services:
       interval: 90s
       timeout: 30s
       retries: 3
-    ports:
-      - "8082:8080"
     volumes:
-      - ./cr-data:/data/hapi
+      - /data/hapi
+    #   - ./configs/opencr/application.yml:/data/hapi/application.yaml
+    ports:
+      - 8081:8080
+    # env_file:
+    #   - ./configs/opencr/.env
+    # environment:
+    #   SPRING_CONFIG_LOCATION: 'file:///data/hapi/application.yaml'
 
   es:
     container_name: es
@@ -238,14 +247,39 @@ services:
       memlock:
         soft: -1
         hard: -1
-    ports:
-      - "9200:9200"
     volumes:
-      - ./es:/usr/share/elasticsearch/data
+      - /usr/share/elasticsearch/data
     networks:
       - hie
     healthcheck:
       test: "curl --silent --fail http://es:9200/_cluster/health || exit 1"
+  
+  ###
+  # Utility for waiting for Sigdep3 Bootup
+  ###
+  wait-for-openmrs:
+    profiles: ['utility']
+    container_name: wait-for-openmrs
+    image: ghcr.io/i-tech-uw/wait-for-openmrs-action:latest 
+    command:
+    - "http://sigdep3:8080/openmrs"
+    - "20" 
+    - "10000"
+    networks:
+    - hie
+
+  ###
+  # Testing
+  ###
+  newman:
+    image: postman/newman
+    container_name: newman
+    profiles: [test]
+    volumes:
+      - ./.postman:/.postman
+    entrypoint: newman run $POSTMAN_COLLECTION -e /.postman/ci.postman_environment.json --insecure --timeout-request 20000 --delay-request 500
+    networks:
+      - hie
 
 volumes:
   openmrs-data:
