--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: traefik:v2.8.3
     container_name: traefik
     ports:
-      - '80:80'
+    #  - '80:80'
       - '443:443'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
@@ -257,6 +257,75 @@ services:
       test: "curl --silent --fail http://es:9200/_cluster/health || exit 1"
   
   ###
+  # OpenMRS 3 Ref App
+  ### 
+  o3:
+    container_name: o3
+    image: openmrs/openmrs-reference-application-3-gateway:${TAG:-nightly}
+    depends_on:
+      - o3-frontend
+      - o3-backend
+    ports:
+      - "80:80"
+    networks:
+      - hie
+    volumes:
+      - ./configs/o3/nginx.conf:/etc/nginx/nginx.conf
+    # tty: true
+    # stdin_open: true
+    # entrypoint: sh
+    
+  o3-frontend:
+    container_name: o3-frontend
+    hostname: frontend
+    image: openmrs/openmrs-reference-application-3-frontend:${TAG:-nightly}
+    environment:
+      SPA_PATH: /openmrs/spa
+      API_URL: /openmrs
+      SPA_CONFIG_URLS:
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/"]
+      timeout: 5s
+    networks:
+      - hie
+  o3-backend:
+    container_name: o3-backend
+    hostname: backend
+    image: openmrs/openmrs-reference-application-3-backend:${TAG:-nightly}
+    depends_on:
+      - o3-db
+    environment:
+      OMRS_CONFIG_MODULE_WEB_ADMIN: "true"
+      OMRS_CONFIG_AUTO_UPDATE_DATABASE: "true"
+      OMRS_CONFIG_CREATE_TABLES: "true"
+      OMRS_CONFIG_CONNECTION_SERVER: o3-db
+      OMRS_CONFIG_CONNECTION_DATABASE: openmrs
+      OMRS_CONFIG_CONNECTION_USERNAME: ${OPENMRS_DB_USER:-openmrs}
+      OMRS_CONFIG_CONNECTION_PASSWORD: ${OPENMRS_DB_PASSWORD:-openmrs}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/openmrs"]
+      timeout: 5s
+    volumes:
+      - /openmrs/data
+    ports:
+      - "8088:8080"
+    networks:
+      - hie
+  # MariaDB
+  o3-db:
+    container_name: o3-db
+    image: mariadb:10.8.2
+    command: "mysqld --character-set-server=utf8 --collation-server=utf8_general_ci"
+    environment:
+      MYSQL_DATABASE: openmrs
+      MYSQL_USER: ${OPENMRS_DB_USER:-openmrs}
+      MYSQL_PASSWORD: ${OPENMRS_DB_PASSWORD:-openmrs}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-openmrs}
+    volumes:
+      - db-data:/var/lib/mysql
+    networks:
+      - hie
+  ###
   # Utility for waiting for Sigdep3 Bootup
   ###
   wait-for-openmrs:
@@ -284,5 +353,6 @@ services:
       - hie
 
 volumes:
-  openmrs-data:
-  mysql-data:      
+  mysql-data: ~  
+  openmrs-data: ~
+  db-data: ~
