Updates to OpenCR identifier configuration for CR Workflows (#12)
* Updates to identifier config
* Fixes for Demo
* OpenCR version fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,13 @@ jobs:
         continue-on-error: true
         
       - name: Start containers
-        run: docker-compose up -d
+        run: docker-compose up -d sigdep3 sigdep-db openhim-core mongo-db opencr-fhir opencr openhim-config es openhim-console
 
       - name: Display docker logs for openhim config
         run: docker-compose logs openhim-config
+
+      - name: Display docker logs for OpenCR
+        run: docker-compose logs opencr opencr-fhir
 
       - name: Display container status
         run: docker-compose ps
