--- a/configs/opencr/config.json
+++ b/configs/opencr/config.json
@@ -5,12 +5,16 @@
   },
   "app": {
     "port": 3000,
-    "installed": false
+    "installed": true
   },
   "clients": [
     {
-      "id": "openmrs",
-      "displayName": "SIGDEP-3"
+      "id": "sigdep3",
+      "displayName": "SIGDEP3"
+    },
+    {
+      "id": "sigdep3-35",
+      "displayName": "2eme SIGDEP3"
     },
     {
       "id": "postman",
@@ -55,7 +59,12 @@
   "systems": {
     "CRBaseURI": "http://openclientregistry.org/fhir",
     "internalid": {
-      "uri": "http://clientregistry.org/openmrs",
+      "uri": [
+        "http://clientregistry.org/openmrs",
+        "http://tap-cdi.openelis.org/openmrs",
+        "http://tap-demo.openelisci.org/openmrs",
+        "http://35.85.179.171/openmrs"
+      ],
       "displayName": "Internal ID"
     },
     "art": {
@@ -66,8 +75,12 @@
       "uri": "http://cote.divore/ext/identifier/UPI",
       "displayName": "UPID"
     },
-    "lims": {
-      "uri": "http://clientregistry.org/lims"
+    "openmrs": {
+      "uri": [
+        "http://tap-cdi.openelis.org/ext/identifier/openmrs-id",
+        "http://35.85.179.171/ext/identifier/openmrs-id"
+      ],
+      "displayName": "OpenMRS ID"
     },
     "artnumber": {
       "uri": "http://clientregistry.org/artnumber",
@@ -78,7 +91,7 @@
     }
   },
   "sync": {
-    "lastFHIR2ESSync": "2022-12-07T22:42:27"
+    "lastFHIR2ESSync": "2023-03-15T23:11:44"
   },
   "__comments": {
     "matching.tool": "this tells if the app should use mediator algorithms or elasticsearch algorithms for matching, two options mediator and elasticsearch"
