--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -25,7 +25,7 @@ services:
       - ./configs/sigdep3/distribution:/openmrs/distribution
       - .data/sigdep3:/openmrs/data
     ports:
-      - "8090:8080"
+      - "8080:8080"
       - "1044:1044"
   sigdep-db:
     image: library/mysql:5.6
@@ -49,20 +49,22 @@ services:
       - ./configs/sigdep3/init-db:/docker-entrypoint-initdb.d
       - .db/sigdep3:/var/lib/mysql
     ports:
-      - "3306:3306"
+      - "3307:3306"
 
-  ###
-  # OpenHIM
-  ###
+#OpenHIM -IOL
+  mongo:
+    container_name: openhim-mongo
+    ports:
+      - "27017:27017"
+    image: mongo:3.4
+
   openhim-core:
     container_name: openhim-core
-    hostname: openhim-core
-    image: jembi/openhim-core:latest
+    image: jembi/openhim-core:v7.1.0
     restart: unless-stopped
     environment:
-      mongo_url: "mongodb://mongo-db/openhim"
-      mongo_atnaUrl: "mongodb://mongo-db/openhim"
-      NODE_ENV: "development"
+      - mongo_url=mongodb://mongo/openhim
+      - mongo_atnaUrl=mongodb://mongo/openhim
     healthcheck:
       test: "node /healthcheck.js"
       interval: 20s
@@ -74,12 +76,17 @@ services:
       - "8085:8080"
       - "5000:5000"
       - "5001:5001"
-
+      - "5050:5050"
+      - "5051:5051"
+      - "5052:5052"
+      - "7788:7788" 
+    depends_on:
+      - mongo
   openhim-console:
     container_name: openhim-console
-    hostname: openhim-console
-    image: jembi/openhim-console:latest
-    restart: unless-stopped
+    image: jembi/openhim-console:v1.15.0
+    ports:
+        - "9000:80"
     volumes:
       - ./configs/openhim-console/default-local.json:/usr/share/nginx/html/config/default.json
     healthcheck:
@@ -87,8 +94,6 @@ services:
       interval: 10s
       timeout: 60s
       retries: 3
-    ports:
-      - "9000:80"
 
   # Loads Default OpenHIM Config
   openhim-config:
@@ -97,20 +102,22 @@ services:
     volumes:
       - ./configs/openhim/test-openhim-config.json:/app/test-openhim-config.json
 
-  mongo-db:
-    container_name: mongo-db
-    image: mongo:3.4
-    volumes:
-      - .db/openhim:/data/db
-    restart: unless-stopped
-  
-  ###
+
+# Hapi-FHIR -  SHR
+  hapi-fhir-jpaserver-starter:
+    image: openmrsinfra/openmrs-hapi-fhir:openmrs-fhir-plir_cql
+    container_name: hapi-fhir-shr
+    restart: on-failure
+    ports:
+      - "8090:8080"   
+
+###
   # OpenCR - Client Registry
   ###
   opencr:
     container_name: opencr
     hostname: opencr
-    image: intrahealth/opencr:bac5a14
+    image: intrahealth/opencr:latest
     restart: unless-stopped
     environment:
       - NODE_ENV=docker
@@ -161,8 +168,3 @@ services:
       - /usr/share/elasticsearch/data
     healthcheck:
       test: "curl --silent --fail http://es:9200/_cluster/health || exit 1"
-  
-
-volumes:
-  certs: ~
-  letsencrypt: ~
