--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -23,7 +23,8 @@ services:
       OMRS_DEV_DEBUG_PORT: "1044"
     volumes:
       - ./configs/sigdep3/distribution:/openmrs/distribution
-      - .data/sigdep3:/openmrs/data
+      # uncomment to persist the volumes on the Host file system
+      #- .data/sigdep3:/openmrs/data
     ports:
       - "8080:8080"
       - "1044:1044"
@@ -47,7 +48,8 @@ services:
       retries: 10
     volumes:
       - ./configs/sigdep3/init-db:/docker-entrypoint-initdb.d
-      - .db/sigdep3:/var/lib/mysql
+      # uncomment to persist the volumes on the Host file system
+      #- .db/sigdep3:/var/lib/mysql
     ports:
       - "3307:3306"
 
@@ -168,3 +170,97 @@ services:
       - /usr/share/elasticsearch/data
     healthcheck:
       test: "curl --silent --fail http://es:9200/_cluster/health || exit 1"
+
+   # OpenELIS Setup
+   ####
+  # OpenELIS
+  ####
+  certs:
+    container_name: oe-certs
+    image: ghcr.io/i-tech-uw/certgen:main
+    restart: always
+    environment:
+      - KEYSTORE_PW="kspass"
+      - TRUSTSTORE_PW="tspass"
+    volumes:
+      - cert-volume:/etc/openelis-global
+      - keys-vol:/etc/ssl/private/
+      - certs-vol:/etc/ssl/certs/
+
+
+  database:
+    container_name: openelisglobal-database
+    image: postgres:9.5
+    ports:
+       - "15432:5432"
+    restart: always
+    env_file:
+      - ./configs/openelis/database/database.env
+    volumes:
+      # preserves the database between containers
+      - db-data:/var/lib/postgresql/data
+        # files here will run on install
+      - ./configs/openelis/database/dbInit:/docker-entrypoint-initdb.d
+
+    healthcheck:
+      test: ["CMD", "pg_isready", "-q", "-d", "clinlims", "-U", "clinlims"]
+      timeout: 45s
+      interval: 10s
+      retries: 10
+
+  oe.openelis.org:
+    container_name: openelisglobal-webapp
+    image: ghcr.io/i-tech-uw/openelis-global-2:develop
+    depends_on:
+      - database
+    ports:
+       - "8443:8443"
+    restart: always
+    environment:
+      - TZ=Africa/Nairobi
+        # context.xml doesn't seem to be able to pick up environment variables directly, so we are passing them in as CATALINA_OPTS
+      - CATALINA_OPTS= -Ddatasource.url=jdbc:postgresql://database:5432/clinlims -Ddatasource.username=clinlims -Ddatasource.password=clinlims
+    volumes:
+      - cert-volume:/etc/openelis-global
+      # -  openelis-plugins-data:/var/lib/openelis-global/plugins
+      - ./configs/openelis/tomcat/oe_server.xml:/usr/local/tomcat/conf/server.xml
+    secrets:
+      - source: datasource.password
+      - source: common.properties
+
+
+  fhir.openelis.org:
+    container_name: external-fhir-api
+    image: hapiproject/hapi:v5.5.1
+    # ports:
+    # - "8081:8080"
+    restart: always
+    environment:
+      - hapi.fhir.auto_create_placeholder_reference_targets=true
+      - hapi.fhir.allow_placeholder_references=true
+      - hapi.fhir.allow_external_references=true
+  
+
+  fhir.openelis.org.remote:
+    container_name: openelis-remote-source
+    image: hapiproject/hapi:v5.5.1
+    # ports:
+    #   - "8081:8080"
+    restart: always
+    environment:
+      - hapi.fhir.auto_create_placeholder_reference_targets=true
+      - hapi.fhir.allow_placeholder_references=true
+      - hapi.fhir.allow_external_references=true
+  
+
+secrets:
+  datasource.password:
+    file: ./configs/openelis/properties/datasource.password
+  common.properties:
+    file: ./configs/openelis/properties/common.properties
+
+volumes:
+  db-data:
+  cert-volume:
+  certs-vol:
+  keys-vol:       
