use specific openelis image tag

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -210,7 +210,7 @@ services:
 
   oe.openelis.org:
     container_name: openelisglobal-webapp
-    image: ghcr.io/i-tech-uw/openelis-global-2:develop
+    image: ghcr.io/i-tech-uw/openelis-global-2:2.7.1.1
     depends_on:
       - database
     ports:
