--- a/api/pom.xml
+++ b/api/pom.xml
@@ -59,7 +59,12 @@
 		</dependency>
 				
 		<!-- End OpenMRS core -->
-		
+		<dependency>
+        <groupId>org.openmrs.module</groupId>
+        <artifactId>fhir2-api</artifactId>
+        <version>${fhir2Version}</version>
+        <scope>provided</scope>
+      </dependency>
 		
 	<dependency>
 		<groupId>org.apache.commons</groupId>
