--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -47,7 +47,9 @@ services:
       timeout: 20s
       retries: 10
     volumes:
+      - ./configs/sigdep3/mysql.cnf:/etc/mysql/conf.d/custom.cnf  # mysql config preconfigured to allow binlog/debezium
       - ./configs/sigdep3/init-db:/docker-entrypoint-initdb.d
+    
       # uncomment to persist the volumes on the Host file system
       #- .db/sigdep3:/var/lib/mysql
     ports:
@@ -244,6 +246,35 @@ services:
       - hapi.fhir.auto_create_placeholder_reference_targets=true
       - hapi.fhir.allow_placeholder_references=true
       - hapi.fhir.allow_external_references=true
+
+  # Streaming Pipeline
+  streaming-pipeline: 
+    image: openmrsinfra/openmrs-fhir-analytics:plir-binlog
+    container_name: streaming-pipeline
+    healthcheck:
+      test: "exit 0"
+    depends_on:
+      sigdep-db:
+        condition: service_healthy  
+    volumes:
+      - ./configs/streaming-pipeline/config.json:/deployments/config.json
+      # data is the directory which you want to persist the generated parquet files
+      # - ./configs/streaming-pipeline/parquet:/tmp
+    environment:
+      - OPENMRS_URL=http://sigdep3:8080/openmrs
+      - OPENMRS_USERNAME=admin
+      - OPENMRS_PASSWORD=Dppeis@pnls_16
+      - SINK_URL=http://openhim-core:5001/fhir/
+      - SINK_USERNAME=dbezium
+      - SINK_PASSWORD=dbezium
+      - JDBC_FETCH_SIZE=10000
+      - JDBC_MAX_POOL_SIZE=50
+      - JDBC_INITIAL_POOL_SIZE=10
+      - JDBC_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
+      - JDBC_URL=jdbc:mysql://sigdep-db:3306/openmrs
+      # the 2 variable below should be same as volume mappings above
+      #- PARQUET_PATH=
+      - FHIR_DEBEZIUM_CONFIG_PATH=/deployments/config.json    
   
 
 secrets:
