--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -323,6 +323,34 @@ services:
     networks:
     - hie
 
+  # Streaming Pipeline
+  streaming-pipeline: 
+    image: openmrsinfra/openmrs-fhir-analytics:plir-binlog
+    container_name: streaming-pipeline
+    networks:
+    - hie
+    healthcheck:
+      test: "exit 0"
+    volumes:
+      - ./configs/streaming-pipeline/config.json:/deployments/config.json
+      # data is the directory which you want to persist the generated parquet files
+      # - ./configs/streaming-pipeline/parquet:/tmp
+    environment:
+      - OPENMRS_URL=http://sigdep3:8080/openmrs
+      - OPENMRS_USERNAME=admin
+      - OPENMRS_PASSWORD=Dppeis@pnls_16
+      - SINK_URL=http://openhim-core:5001/fhir/
+      - SINK_USERNAME=dbezium
+      - SINK_PASSWORD=dbezium
+      - JDBC_FETCH_SIZE=10000
+      - JDBC_MAX_POOL_SIZE=50
+      - JDBC_INITIAL_POOL_SIZE=10
+      - JDBC_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
+      - JDBC_URL=jdbc:mysql://sigdep-db:3306/openmrs
+      # the 2 variable below should be same as volume mappings above
+      #- PARQUET_PATH=
+      - FHIR_DEBEZIUM_CONFIG_PATH=/deployments/config.json     
+
   ###
   # Testing
   ###
