--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>legacyui</artifactId>
-		<version>1.15.0-SNAPSHOT</version>
+		<version>1.15.0</version>
 	</parent>
 
 	<artifactId>legacyui-api</artifactId>
