--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>legacyui</artifactId>
-		<version>1.15.0-SNAPSHOT</version>
+		<version>1.15.0</version>
 	</parent>
 
 	<artifactId>legacyui-omod</artifactId>
@@ -125,13 +125,13 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>fhir2-api</artifactId>
-			<version>1.10.0-SNAPSHOT</version>
+			<version>1.10.0</version>
 			<scope>provided</scope>
 		  </dependency>
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>fhir2-omod</artifactId>
-			<version>1.10.0-SNAPSHOT</version>
+			<version>1.10.0</version>
 			<scope>provided</scope>
 		  </dependency>
 		<!-- <dependency>
