--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>legacyui</artifactId>
-	<version>1.15.0-SNAPSHOT</version>
+	<version>1.15.0</version>
 	<packaging>pom</packaging>
 	<name>Legacy UI Module</name>
 	<description>Provides the legacy UI which was removed from the platform since version 2.0</description>
@@ -54,7 +54,7 @@
 		<openmrsPlatformVersion>2.0.0</openmrsPlatformVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javaCompilerVersion>1.8</javaCompilerVersion>
-		<fhir2Version>1.10.0-SNAPSHOT</fhir2Version>
+		<fhir2Version>1.10.0</fhir2Version>
 	</properties>
 
 	<dependencyManagement>
