--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>legacyui</artifactId>
-		<version>1.15.0</version>
+		<version>1.15.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>legacyui-omod</artifactId>
