--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -152,14 +152,12 @@ services:
     image: intrahealth/elasticsearch:latest
     restart: unless-stopped
     environment:
-      - node.name=es01
+      - xpack.security.enabled=false
       - discovery.type=single-node
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
     ulimits:
-      memlock:
-        soft: -1
-        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
     volumes:
       - /usr/share/elasticsearch/data
     healthcheck:
