Configure docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
 
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=ci-hie-demo_hie'
-      - 'traefik.http.routers.api.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/api`) || PathPrefix(`/dashboard`)'
+      - 'traefik.docker.network=sigdep3_hie'
+      - 'traefik.http.routers.api.rule=Host(`${HOST_URL}`) && PathPrefix(`/api`) || PathPrefix(`/dashboard`)'
       - 'traefik.http.routers.api.service=api@internal'
       - 'traefik.http.routers.api.tls=true'
       - 'traefik.http.routers.api.entrypoints=web-secure'
@@ -32,20 +32,21 @@ services:
       - hie
     ports:
       - 80:80
+      - 8080:8080
       - 443:443
   certbot:
     image: certbot/certbot:latest
     container_name: certbot
-    entrypoint: "certbot certonly --standalone -n --agree-tos --email pmanko@uw.edu -d tap-demo.openelisci.org"
+    entrypoint: "certbot certonly --standalone -n --agree-tos --email pmanko@uw.edu -d dev.cihis.org"
     environment:
     - AWS_ACCESS_KEY_ID
     - AWS_SECRET_ACCESS_KEY
     volumes:
     - certs:/etc/letsencrypt
     - letsencrypt:/var/lib/letsencrypt
-    # ports:
-    # - 80:80
-    # - 443:443
+#    ports:
+#     - 80:80
+#     - 443:443
 
   sigdep3:
     image: partnersinhealth/openmrs-server:latest
@@ -73,14 +74,14 @@ services:
       - "1044:1044"
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=ci-hie-demo_hie'
+      - 'traefik.docker.network=sigdep3_hie'
       
       - 'traefik.http.services.sigdep3.loadbalancer.server.port=8080'
       - 'traefik.http.services.sigdep3.loadbalancer.server.scheme=http'
       - 'traefik.http.routers.sigdep3.service=sigdep3'
       - 'traefik.http.routers.sigdep3.tls=true'
       - 'traefik.http.routers.sigdep3.entrypoints=web-secure'
-      - 'traefik.http.routers.sigdep3.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openmrs`)'
+      - 'traefik.http.routers.sigdep3.rule=Host(`${HOST_URL}`) && PathPrefix(`/openmrs`)'
     networks: 
       - hie
   sigdep-db:
@@ -134,14 +135,14 @@ services:
       - '5001:5001'
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=ci-hie-demo_hie'
+      - 'traefik.docker.network=sigdep3_hie'
 
       - 'traefik.http.services.openhim-api.loadbalancer.server.port=8080'
       - 'traefik.http.services.openhim-api.loadbalancer.server.scheme=https'
       - 'traefik.http.routers.openhim-api.service=openhim-api'
       - 'traefik.http.routers.openhim-api.tls=true'
       - 'traefik.http.routers.openhim-api.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-api.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-api`)'
+      - 'traefik.http.routers.openhim-api.rule=Host(`${HOST_URL}`) && PathPrefix(`/openhim-api`)'
       - 'traefik.http.routers.openhim-api.middlewares=openhim-api'
       - 'traefik.http.middlewares.openhim-api.stripprefix.prefixes=/openhim-api'
       - 'traefik.http.middlewares.openhim-api.stripprefix.forceSlash=false'
@@ -151,7 +152,7 @@ services:
       - 'traefik.http.routers.openhim-http.service=openhim-http'
       - 'traefik.http.routers.openhim-http.tls=false'
       - 'traefik.http.routers.openhim-http.entrypoints=web'
-      - 'traefik.http.routers.openhim-http.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-http`)'
+      - 'traefik.http.routers.openhim-http.rule=Host(`${HOST_URL}`) && PathPrefix(`/openhim-http`)'
       - 'traefik.http.routers.openhim-http.middlewares=openhim-http'
       - 'traefik.http.middlewares.openhim-http.stripprefix.prefixes=/openhim-http'
       - 'traefik.http.middlewares.openhim-http.stripprefix.forceSlash=false'
@@ -161,7 +162,7 @@ services:
       - 'traefik.http.routers.openhim-ssl.service=openhim-ssl'
       - 'traefik.http.routers.openhim-ssl.tls=true'
       - 'traefik.http.routers.openhim-ssl.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-ssl.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim-ssl`)'
+      - 'traefik.http.routers.openhim-ssl.rule=Host(`${HOST_URL}`) && PathPrefix(`/openhim-ssl`)'
       - 'traefik.http.routers.openhim-ssl.middlewares=openhim-ssl'
       - 'traefik.http.middlewares.openhim-ssl.stripprefix.prefixes=/openhim-ssl'
       - 'traefik.http.middlewares.openhim-ssl.stripprefix.forceSlash=false'
@@ -181,10 +182,10 @@ services:
       retries: 3
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=ci-hie-demo_hie'
+      - 'traefik.docker.network=sigdep3_hie'
       - 'traefik.http.routers.openhim-console.tls=true'
       - 'traefik.http.routers.openhim-console.entrypoints=web-secure'
-      - 'traefik.http.routers.openhim-console.rule=Host(`tap-demo.openelisci.org`) && PathPrefix(`/openhim`)'
+      - 'traefik.http.routers.openhim-console.rule=Host(`${HOST_URL}`) && PathPrefix(`/openhim`)'
       - 'traefik.http.routers.openhim-console.middlewares=openhim-console'
       - 'traefik.http.middlewares.openhim-console.stripprefix.prefixes=/openhim'
       - 'traefik.http.middlewares.openhim-console.stripprefix.forceSlash=false'
@@ -229,11 +230,11 @@ services:
       - ./configs/opencr/PatientRelationship.json:/src/resources/Relationships/PatientRelationship.json
     labels:
       - 'traefik.enable=true'
-      - 'traefik.docker.network=ci-hie-demo_hie'
+      - 'traefik.docker.network=sigdep3_hie'
       - 'traefik.http.routers.opencr.tls=true'
       - 'traefik.http.routers.opencr.entrypoints=web-secure'
       - 'traefik.http.services.opencr.loadbalancer.server.port=3000'
-      - 'traefik.http.routers.opencr.rule=Host(`tap-demo.openelisci.org`)'
+      - 'traefik.http.routers.opencr.rule=Host(`${HOST_URL}`)'
     ports:
       - 3000:3000
   opencr-fhir:
