Introduce O3 specificc docker compose file

--- a/configs/opencr/config.json
+++ b/configs/opencr/config.json
@@ -5,7 +5,7 @@
   },
   "app": {
     "port": 3000,
-    "installed": false
+    "installed": true
   },
   "clients": [
     {
@@ -99,7 +99,7 @@
     }
   },
   "sync": {
-    "lastFHIR2ESSync": "2023-03-15T23:11:44"
+    "lastFHIR2ESSync": "2023-10-10T22:01:20"
   },
   "__comments": {
     "matching.tool": "this tells if the app should use mediator algorithms or elasticsearch algorithms for matching, two options mediator and elasticsearch"
